Se finaliza el refactor y se elimina todas las clases referidas al file repository